2003-05-12  Richard Williamson  <rjw@apple.com>

        Fixed 3251316.  *** Public API Change ***

        Added -(void)setGroupName:(NSString *) and -(NSString *)groupName;
        
        Reviewed by mjs.

        * WebView.subproj/WebView.h:
        * WebView.subproj/WebView.m:

2003-05-12  Richard Williamson  <rjw@apple.com>

        Fixed 3194614 and 3194751.  Add SPI to set 'renderless' mode
        for a frame.
        
        Reviewed by darin.  

        * WebView.subproj/WebFramePrivate.h:
        * WebView.subproj/WebFramePrivate.m:
        
        WebImageRenderers now get a MIME type that can be used to faciliate
        selection of an appropriate decoder.
        
        Reviewed by darin.

        * WebCoreSupport.subproj/WebImageRenderer.h:
        * WebCoreSupport.subproj/WebImageRenderer.m:
        * WebCoreSupport.subproj/WebImageRendererFactory.m:
        * WebKit.pbproj/project.pbxproj:

2003-05-12  John Sullivan  <sullivan@apple.com>

	- addition to Darin's previous patch; when checking whether a request can
	be handled, take into account the schemes that were registered without
	an NSURLProtocol getting involved.

        Reviewed by Darin

        * WebView.subproj/WebViewPrivate.h:
        * WebView.subproj/WebViewPrivate.m:
        (+[WebView _canHandleRequest:]):
	like NSURLConnection canHandleRequest, but also takes into account the
	schemes that were registered without an NSURLProtocol
        * Plugins.subproj/WebNetscapePluginStream.m:
        (-[WebNetscapePluginStream initWithRequest:pluginPointer:notifyData:]):
	use +[WebView _canHandleRequest] instead of +[NSURLConnection canHandleRequest]
        * WebView.subproj/WebDefaultContextMenuDelegate.m:
        (-[WebDefaultUIDelegate webView:contextMenuItemsForElement:defaultMenuItems:]):
	ditto
        * WebView.subproj/WebDefaultPolicyDelegate.m:
        (-[WebDefaultPolicyDelegate webView:decidePolicyForNavigationAction:request:frame:decisionListener:]):
	ditto