@@ -1,3 +1,14 @@
+2003-05-13  John Sullivan  <sullivan@apple.com>
+
+	fixed build break
+
+        Reviewed by Darin
+
+        * WebCoreSupport.subproj/WebImageRenderer.m:
+        (-[WebImageRenderer initWithData:MIMEType:]):
+	move #ifdefs; two required methods were being #ifdeffed
+	out on Panther
+
 2003-05-12  Richard Williamson  <rjw@apple.com>
 
         Fixed 3251316.  *** Public API Change ***
